[package]
name = "apato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.1"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rocket = "=0.5.0-rc.3"
serde = "1.0.140"
tokio-cron-scheduler = "*"
