[package]
name = "apato"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.140"
serde_json = "1.0.99"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
dotenvy = "0.15.7"
chrono = "0.4"
colored = { version = "2.0.4", features = ["no-color"] }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
