[package]
name = "apato"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.140"
serde_json = "1.0.99"
serde-this-or-that = "0.4"
diesel = { version = "2.1.5", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
chrono = "0.4"
colored = { version = "2.0.4", features = ["no-color"] }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
regex = "1.5"
teloxide = { version = "0.12", features = ["macros"] }
lazy_static = "1.4.0"
anyhow = "1.0.81"
toml = "0.5.9"
nalgebra = "0.32.5"
signal-hook = "0.3.17"
async-channel = "2.2.1"
futures = "0.3.30"
